# Hosted_Agents_Workshop_Lab

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  check_links.ps1  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/skills/hosted-agent-review/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  markdown-links.yml  secret-scan.yml
labs/: README.md
labs/lab-0-foundry-setup/: lab-0_readme.md
labs/lab-1-copilot-config/: lab-1_readme.md
labs/lab-2-implementation-shape/: lab-2_readme.md
labs/lab-3-ci/: lab-3_readme.md
labs/lab-4-deploy/: lab-4_readme.md
labs/lab-5-ui/: lab-5_readme.md
scripts/: capture-ui-chrome.ps1  deploy-foundry-agent.ps1  deploy-hosted-agent-direct.ps1  deploy_foundry_agent.py  reset-workshop.ps1  reset-workshop.sh
src/WorkshopLab.AgentHost/: WorkshopLab.AgentHost.csproj
src/WorkshopLab.ChatUI/: WorkshopLab.ChatUI.csproj
src/WorkshopLab.FoundryDeployment/: WorkshopLab.FoundryDeployment.csproj
src/workshop_lab_agent_host/: Dockerfile  agent.yaml  main.py  run-requests.http
src/workshop_lab_chat_ui/: app.py
src/workshop_lab_chat_ui/static/: app.css
src/workshop_lab_chat_ui/templates/: index.html
src/workshop_lab_core/: __init__.py  hosted_agent_advisor.py
tests/: test_hosted_agent_advisor.py
tests/WorkshopLab.Tests/: WorkshopLab.Tests.csproj
